--- a/apps/client-web/src/app/components/nav/nav.component.html
+++ b/apps/client-web/src/app/components/nav/nav.component.html
@@ -118,10 +118,7 @@
           @if (isLabelShowed()) {
             <span>Light</span>
           }
-          <p-inputSwitch
-            [(ngModel)]="theme"
-            (onChange)="onChangeTheme($event)"
-          />
+          <p-inputSwitch [(ngModel)]="theme" (onChange)="toggleDarkMode()" />
           @if (isLabelShowed()) {
             <span>Dark</span>
           }
