--- a/apps/client-web/src/app/components/nav/nav.component.scss
+++ b/apps/client-web/src/app/components/nav/nav.component.scss
@@ -197,7 +197,7 @@
     gap: 1rem;
     height: var(--header-height);
     padding: 1rem 0.5rem;
-    background-color: var(--surface-section);
+    background-color: var(--p-content-background);
     display: flex;
     width: 4rem;
     position: sticky;
