--- a/libs/client-web/browse/ui/src/lib/select-items-filter/select-items-filter.component.html
+++ b/libs/client-web/browse/ui/src/lib/select-items-filter/select-items-filter.component.html
@@ -6,9 +6,12 @@
         #checkbox
         [ngModel]="selectedItems()"
         (ngModelChange)="changeSelectedItems($event, item)"
-        [label]="getItemLabel(item)"
         [value]="item"
+        [inputId]="trackFn(0, item).toString()"
       />
+      <label [for]="trackFn(0, item).toString()">
+        {{ getItemLabel(item) }}
+      </label>
     } @empty {
       <div class="filter__items__message">Not found!</div>
     }
