--- a/libs/client-web/browse/feature/books/src/lib/filters/filters.component.scss
+++ b/libs/client-web/browse/feature/books/src/lib/filters/filters.component.scss
@@ -24,10 +24,10 @@
     width: 100%;
     scrollbar-width: thin;
     scrollbar-color: var(--text-color-secondary) var(--surface-hover);
-    box-shadow:
-      0px 3px 5px rgba(0, 0, 0, 0.02),
-      0px 0px 2px rgba(0, 0, 0, 0.05),
-      0px 1px 4px rgba(0, 0, 0, 0.08);
+    /* box-shadow: */
+    /*   0px 3px 5px rgba(0, 0, 0, 0.02), */
+    /*   0px 0px 2px rgba(0, 0, 0, 0.05), */
+    /*   0px 1px 4px rgba(0, 0, 0, 0.08); */
   }
 
   .open-sidebar-button {
