--- a/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
+++ b/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
@@ -1,14 +1,17 @@
-<div [routerLink]="['/book', book().id]" class="book-card">
+<div
+  [routerLink]="['/book', book().id]"
+  class="book-card bg-content-background"
+>
   <div class="book-card__image-container">
-  <img
-    alt="Card"
-    class="book-card__image"
-    [ngSrc]="
-      book().coverImage ? book().coverImage! : 'assets/images/not-found.png'
-    "
-    fill
-  />
-</div>
+    <img
+      alt="Card"
+      class="book-card__image"
+      [ngSrc]="
+        book().coverImage ? book().coverImage! : 'assets/images/not-found.png'
+      "
+      fill
+    />
+  </div>
   <div class="book-card__body">
     <div class="book-card__body__header">
       <h3 class="book-card__body__header-title">{{ book().title }}</h3>
