Rewrote styles to tailwindcss

--- a/apps/client-web/src/app/components/nav/nav.component.html
+++ b/apps/client-web/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
-<div class="mobile-toolbar">
+<div class="w-full flex items-center sticky bottom-0 left-0 right-0 xl:hidden">
   <p-toolbar appNavToolbar>
-    <div class="mobile-toolbar__items">
+    <div class="mx-auto w-full flex items-center justify-center">
       <p-button
         appNavButton
         size="large"
@@ -39,37 +39,34 @@
 
 <p-sidebar appSidebarLeft [(visible)]="isOpen" [blockScroll]="true">
   <ng-template pTemplate="header">
-    <a routerLink="/" [queryParams]="null" class="nav__links_logo">
-      <span class="nav__links_logo_name">Story</span>
-      <span class="nav__links_logo_name">Stash</span>
-    </a>
+    <ng-container [ngTemplateOutlet]="logo" />
   </ng-template>
-  <div class="sidebar">
+  <div class="flex flex-col">
     <ng-container [ngTemplateOutlet]="links" />
   </div>
 </p-sidebar>
 
-<aside class="aside" [@slideInOut]="isExpanded() ? 'in' : 'out'">
-  <nav class="nav">
-    <div class="nav__links">
-      <div class="logo">
+<aside
+  class="hidden justify-between gap-4 xl:h-content px-2 py-4 bg-content-background xl:sticky z-[1001] top-8 flex-col rounded-base xl:flex"
+  [@slideInOut]="isExpanded() ? 'in' : 'out'"
+>
+  <nav class="h-content flex flex-col justify-between">
+    <div class="flex flex-col">
+      <div class="h-9 flex items-center justify-center">
         @if (isLabelShowed()) {
-          <a routerLink="/" [queryParams]="null" class="nav__links_logo">
-            <span class="nav__links_logo_name">Story</span>
-            <span class="nav__links_logo_name">Stash</span>
-          </a>
+          <ng-container [ngTemplateOutlet]="logo" />
         } @else {
           <p-button
             appNavButton
             routerLink="/"
-            routerLinkActive="active"
+            routerLinkActive=""
             [routerLinkActiveOptions]="{ exact: true }"
             icon="pi pi-home"
           />
         }
       </div>
       <p-divider />
-      <ul class="items">
+      <ul class="flex flex-col">
         <p-button
           appNavButton
           routerLink="/browse"
@@ -83,7 +80,7 @@
       </ul>
     </div>
 
-    <div class="nav__footer">
+    <div class="flex flex-col">
       <lib-cart-sidebar [isLabelShowed]="isLabelShowed()" />
       @if (isAuthenticated()) {
         <p-button
@@ -113,8 +110,8 @@
         />
       }
       <p-divider />
-      <div class="footer">
-        <div class="menu" [ngClass]="{ 'expanded-menu': isLabelShowed() }">
+      <div class="flex flex-col gap-2">
+        <div class="flex items-center gap-4 mx-auto">
           @if (isLabelShowed()) {
             <span>Light</span>
           }
@@ -125,7 +122,6 @@
         </div>
         <p-button
           appNavButton
-          class="expand-collapse-button"
           (onClick)="expandCollapseNavigation()"
           [icon]="isExpanded() ? 'pi pi-arrow-left' : 'pi pi-arrow-right'"
         />
@@ -133,6 +129,17 @@
     </div>
   </nav>
 </aside>
+
+<ng-template #logo>
+  <a
+    routerLink="/"
+    [queryParams]="null"
+    class="text-xl no-underline flex items-center justify-center"
+  >
+    <span class="font-bold text-primary">Story</span>
+    <span class="uppercase text-muted-color">Stash</span>
+  </a>
+</ng-template>
 
 <ng-template #links>
   @if (isAccountRouteActive()) {
@@ -151,7 +158,6 @@
     @for (category of categories(); track category.id) {
       <p-button
         appNavButton
-        class="category"
         routerLink="/browse"
         [queryParams]="{
           categories: category.name.toLowerCase().split(' ').join('_'),
