--- a/libs/client-web/browse/feature/books/src/lib/filters/price-filters/price-filters.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/filters/price-filters/price-filters.component.html
@@ -1,4 +1,4 @@
-<div class="price-filter">
+<div class="flex items-end gap-2 p-4">
   <lib-form-field label="Min">
     <p-inputNumber
       slot="input"
@@ -11,7 +11,7 @@
       currency="USD"
     />
   </lib-form-field>
-  <div class="price-filter__divider">
+  <div class="mb-2 w-8">
     <p-divider />
   </div>
 
