--- a/apps/client-web/src/app/app.component.html
+++ b/apps/client-web/src/app/app.component.html
@@ -4,7 +4,7 @@
 >
   <app-nav />
   <div
-    class="w-full h-full overflow-y-auto xl:pl-gap xl:px-0 xl:py-0 xl:overflow-y-visible"
+    class="w-full h-full overflow-y-auto p-4 xl:pl-gap xl:p-0 xl:overflow-y-visible"
   >
     <router-outlet />
   </div>
