--- a/libs/client-web/account/feature/orders/src/lib/orders.component.html
+++ b/libs/client-web/account/feature/orders/src/lib/orders.component.html
@@ -1,16 +1,14 @@
-<div class="orders">
+<div
+  class="grid grid-cols-1 relative 2xl:grid-cols-2 gap-base [2800px]:grid-cols-[1fr_0.7fr]"
+>
   <p-table
-    class="table"
+    class="h-content overflow-y-auto 2xl:sticky 2xl:top-8"
     [value]="orders()"
     selectionMode="single"
     [selection]="selectedOrder()"
     (selectionChange)="selectOrder($event)"
     dataKey="id"
-    [tableStyle]="{
-      width: '100%',
-      'background-color': 'var(--surface-section)',
-      'border-radius': 'var(--border-radius)',
-    }"
+    tableStyleClass="bg-content-background rounded-base overflow-hidden"
     [loading]="loading()"
     [showLoader]="false"
   >
@@ -55,7 +53,7 @@
 
   <p-sidebar
     (onHide)="selectedOrder.set(null)"
-    class="sidebar p-sidebar-right--wide"
+    class="2xl:hidden w-[20rem]"
     [(visible)]="sidebarVisible"
     position="right"
   >
@@ -66,8 +64,10 @@
   </p-sidebar>
 
   @if (selectedOrder()) {
-    <lib-order class="order-details" [orderDetails]="selectedOrder()" />
+    <lib-order class="flex w-full" [orderDetails]="selectedOrder()" />
   } @else {
-    <div class="order-details__info">Select order to see details</div>
+    <div class="block text-center mt-12 text-3xl">
+      Select order to see details
+    </div>
   }
 </div>
