--- a/libs/client-web/auth/feature/login/src/lib/login/login.component.html
+++ b/libs/client-web/auth/feature/login/src/lib/login/login.component.html
@@ -7,7 +7,7 @@
   @let loading = loading$ | async;
   <form
     [formGroup]="loginForm"
-    class="form"
+    class="flex flex-col gap-2 w-full max-w-[30rem] xl:items-center"
     (submit)="onSubmit()"
   >
     <lib-form-field label="Email" [isRequired]="true">
@@ -19,8 +19,7 @@
         id="email"
         autocomplete="off"
         [ngClass]="{
-          'ng-dirty ng-invalid':
-            emailControl.invalid && submitted(),
+          'ng-dirty ng-invalid': emailControl.invalid && submitted(),
         }"
         formControlName="email"
       />
@@ -40,10 +39,11 @@
         slot="input"
         id="password"
         [feedback]="false"
+        inputStyleClass="w-full"
+        styleClass="w-full"
         [toggleMask]="true"
         [ngClass]="{
-          'ng-dirty ng-invalid':
-            passwordControl.invalid && submitted(),
+          'ng-dirty ng-invalid': passwordControl.invalid && submitted(),
         }"
         formControlName="password"
       />
@@ -67,7 +67,8 @@
       [loading]="loading"
       loading-icon="pi pi-spin pi-spinner"
       iconPos="right"
-      class="form__submit-btn"
+      [style]="{ width: '100%' }"
+      class="w-full mt-5"
     />
   </form>
 </lib-container>
