--- a/libs/client-web/browse/feature/books/src/lib/filters/filter/filter.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/filters/filter/filter.component.html
@@ -1,22 +1,24 @@
-<div class="filter">
+<div class="pt-2 flex flex-col gap-2">
   <input
     pInputText
     [placeholder]="placeholder()"
     [formControl]="searchControl"
   />
-  <div class="filter__items">
+  <div class="flex flex-col gap-1">
     @for (item of items(); track $index) {
-      <p-checkbox
-        [ngModel]="selectedItems()"
-        (ngModelChange)="selectItem($event, item)"
-        [value]="item"
-        [inputId]="trackFn($index, item).toString()"
-      />
-      <label [for]="trackFn($index, item).toString()">
-        {{ getLabelItem(item) }}
-      </label>
+      <div class="flex items-center gap-2">
+        <p-checkbox
+          [ngModel]="selectedItems()"
+          (ngModelChange)="selectItem($event, item)"
+          [value]="item"
+          [inputId]="trackFn($index, item).toString()"
+        />
+        <label [for]="trackFn($index, item).toString()">
+          {{ getLabelItem(item) }}
+        </label>
+      </div>
     } @empty {
-      <div class="filter__items__message">Not found!</div>
+      <div class="text-center">Not found!</div>
     }
   </div>
 </div>
