--- a/libs/client-web/home/feature/src/lib/skeleton-books-section/skeleton-books-section.component.html
+++ b/libs/client-web/home/feature/src/lib/skeleton-books-section/skeleton-books-section.component.html
@@ -1,3 +1,3 @@
-<div class="skeleton-books-section">
+<div class="w-full max-w-[120rem] mx-auto rounded-base">
   <p-skeleton height="25rem" />
 </div>
