--- a/libs/client-web/shared/ui/src/lib/book-card-skeleton/book-card-skeleton.component.html
+++ b/libs/client-web/shared/ui/src/lib/book-card-skeleton/book-card-skeleton.component.html
@@ -1,12 +1,18 @@
-<div class="book-card-skeleton">
-  <p-skeleton class="border-round max-w-34rem" width="100%" height="14.5rem" />
+<div
+  class="bg-content-background rounded-base flex flex-col mx-auto max-w-book-card w-full"
+>
+  <p-skeleton
+    class="rounded-base max-w-book-card"
+    width="100%"
+    height="14.5rem"
+  />
 
-  <div class="book-card-skeleton__body">
+  <div class="flex flex-col gap-5 p-4">
     <p-skeleton class="border-round" width="10rem" height="2rem" />
     <p-skeleton class="border-round" width="100%" height="5rem" />
 
     <p-skeleton
-      class="book-card-skeleton__footer"
+      class="rounded-base flex justify-end"
       width="50%"
       height="2.5rem"
     />
