--- a/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
+++ b/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
@@ -1,29 +1,30 @@
 <div
   [routerLink]="['/book', book().id]"
-  class="book-card bg-content-background"
+  class="flex flex-col rounded-base cursor-pointer max-w-book-card w-full bg-content-background"
 >
-  <div class="book-card__image-container">
+  <div class="w-full h-96 rounded-base relative">
     <img
       alt="Card"
-      class="book-card__image"
+      class="w-full h-full object-cover rounded-base"
       [ngSrc]="
         book().coverImage ? book().coverImage! : 'assets/images/not-found.png'
       "
       fill
     />
   </div>
-  <div class="book-card__body">
-    <div class="book-card__body__header">
-      <h3 class="book-card__body__header-title">{{ book().title }}</h3>
+  <div class="flex flex-col gap-base p-base">
+    <div class="flex flex-col gap-1">
+      <h3 class="text-base font-bold">{{ book().title }}</h3>
       @for (author of book().authors; track author.id) {
-        <span class="book-card__body__header-author">{{ author.name }}</span>
+        <span class="text-muted-color">{{ author.name }}</span>
       }
     </div>
-    <div class="book-card__body__content">
+    <div class="flex items-center justify-between">
       <span>{{ book().price | currency: 'USD' }}</span>
       <p-button
         label="Add to cart"
         icon="pi pi-cart-plus"
+        size="small"
         [loading]="awaitingBookIdsToAddToCart().includes(book().id)"
         (onClick)="addToCart($event, book())"
       />
