--- a/libs/client-web/shared/ui/src/lib/form-field/form-field.component.html
+++ b/libs/client-web/shared/ui/src/lib/form-field/form-field.component.html
@@ -1,15 +1,15 @@
 @if (isLoading()) {
-  <div class="skeleton">
+  <div class="flex flex-col gap-2">
     <p-skeleton [width]="labelSkeletonWidth()" height="1rem" />
     <p-skeleton [width]="inputSkeletonWidth()" height="2.2rem" />
   </div>
 } @else {
-  <div class="form-field">
-    <label class="form-field__label">
+  <div class="flex flex-col w-full">
+    <label class="flex flex-col gap-1">
       <span>{{ label() }} {{ isRequired() ? '*' : '' }}</span>
       <ng-content select="[slot='input']" />
     </label>
-    <div class="form-field__input">
+    <div class="mt-1">
       <ng-content select="[slot='error-message'], lib-error-message" />
     </div>
   </div>
