Implemented theme saving in local storage

--- a/apps/client-web/src/app/components/nav/nav.component.html
+++ b/apps/client-web/src/app/components/nav/nav.component.html
@@ -115,7 +115,7 @@
           @if (isLabelShowed()) {
             <span>Light</span>
           }
-          <p-inputSwitch [(ngModel)]="theme" (onChange)="toggleDarkMode()" />
+          <p-inputSwitch [ngModel]="isDark()" (onChange)="toggleDarkMode()" />
           @if (isLabelShowed()) {
             <span>Dark</span>
           }
